# mySharesReport

./: README.md  pyproject.toml  setup.py
report_me/: myReport.py
