[tool.poetry]
name = "mySharesReport"
version = "0.2.0"
description = "A robust Python class providing a pdf report with shares data.."
authors = ["oliverrudow <oliver.rudow@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
reportlab = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"